# test_task_grpc

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
database/: config.py  db_helper.py
order-service/: Dockerfile
order_service/: Dockerfile  docker-compose.yml  pyproject.toml
order_service/app/: config.py  crud.py  database.py  dependencies.py  errors.py  main.py
order_service/app/core/: __init__.py  config.py  db_helper.py
order_service/app/crud/: order.py
order_service/app/models/: __init__.py  order.py
order_service/app/schemas/: __init__.py  order.py
order_service/app/views/: __init__.py  order.py
order_service/grpc/: grpc_client.py  order.proto  order_pb2.py  order_pb2_grpc.py  order_service.py
order_service/migrations/: env.py
order_service/migrations/versions/: 2024_07_11_1627-a73a3d2a352a_create_order_table.py  (+2 more)
shared/order_grpc/: grpc_client.py
shared/user_grpc/: user.proto  user_pb2_grpc.py  user_service.py
user_service/: Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
user_service/app/: crud.py  dependencies.py  main.py  schemas.py
user_service/app/core/: config.py  db_helper.py
user_service/app/crud/: user.py
user_service/app/models/: __init__.py  user.py
user_service/app/schemas/: __init__.py  user.py
user_service/app/views/: __init__.py  user.py
user_service/grpc/: user.proto  user_pb2.py  user_pb2_grpc.py  user_service.py
user_service/migrations/: env.py
user_service/migrations/versions/: 2024_07_11_0206-c31a49a7b96d_create_user_table.py
