[tool.poetry]
name = "test-task-grpc"
version = "0.1.0"
description = ""
authors = ["YuryHaurylenka gshshaaha@gmail.com"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.3"
fastapi = "^0.111.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
alembic = "^1.13.2"
psycopg2-binary = "^2.9.9"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
asyncpg = "^0.29.0"
uvicorn = "^0.30.1"
greenlet = "^3.0.3"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.30.1"
grpcio = "^1.64.1"
grpcio-tools = "^1.64.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
